[gd_scene load_steps=15 format=3 uid="uid://lmdkqsrww7lr"]

[ext_resource type="Script" path="res://main_menu/online/online_menu.gd" id="1_6se6n"]
[ext_resource type="FontFile" uid="uid://dg0wgobwcnhf1" path="res://assets/fonts/GravityBold8.ttf" id="2_8rinf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3oyjb"]
bg_color = Color(0, 0, 0, 0.87451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnhin"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1ac6"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.25098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6t6ra"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.501961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqpgy"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
draw_center = false
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rnl1f"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.25098)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3784y"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5uue"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(1, 1, 1, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2sdxj"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iu6dq"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
draw_center = false
border_width_top = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgkx6"]
content_margin_top = 4.0
content_margin_bottom = 4.0
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mjl8a"]
content_margin_top = 4.0
content_margin_bottom = 4.0
draw_center = false

[node name="OnlineMenu" type="PanelContainer" node_paths=PackedStringArray("username_input", "connect_status", "endless_holders", "bullet_holders")]
custom_minimum_size = Vector2(256, 256)
theme_override_styles/panel = SubResource("StyleBoxFlat_3oyjb")
script = ExtResource("1_6se6n")
username_input = NodePath("MarginContainer/VBoxContainer/HBoxContainer/Username")
connect_status = NodePath("MarginContainer/VBoxContainer/HBoxContainer/Connected")
endless_holders = NodePath("MarginContainer/VBoxContainer/TabContainer/Endless/ScrollContainer/VBoxContainer")
bullet_holders = NodePath("MarginContainer/VBoxContainer/TabContainer/Bullet/ScrollContainer/VBoxContainer")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_8rinf")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_pnhin")
theme_override_styles/hover = SubResource("StyleBoxFlat_y1ac6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6t6ra")
theme_override_styles/focus = SubResource("StyleBoxFlat_y1ac6")
text = "BACK"

[node name="Connected" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("2_8rinf")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[u][color=lime]CONNECTED :D"
fit_content = true
autowrap_mode = 0

[node name="Username" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_8rinf")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_fqpgy")
theme_override_styles/focus = SubResource("StyleBoxFlat_rnl1f")
placeholder_text = "USERNAME"
max_length = 10
expand_to_text_length = true
select_all_on_focus = true

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8rinf")
theme_override_font_sizes/font_size = 8
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_3784y")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_x5uue")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_2sdxj")
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_3784y")
theme_override_styles/panel = SubResource("StyleBoxFlat_iu6dq")
tab_alignment = 1

[node name="Endless" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Endless"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rgkx6")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Endless/ScrollContainer"]
layout_mode = 2

[node name="Bullet" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Bullet"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mjl8a")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Bullet/ScrollContainer"]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/HBoxContainer/Username" to="." method="_on_username_text_submitted"]
